--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: repo.techniverse.net/docker-hosted/sinusbot:1.0.2
+    image: git.techniverse.net/scriptos/sinusbot:1.0.2
     container_name: sinusbot
     hostname: sinusbot
     networks:
